# axum_thiserror

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
axum_thiserror_macro/: Cargo.toml
axum_thiserror_macro/src/: lib.rs
src/: lib.rs
tests/: basic_error.rs
