[workspace]
members = [".", "axum_thiserror_macro"]


[package]
name = "axum_thiserror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.*"
thiserror = "1.0.*"
axum_thiserror_macro = { path = "axum_thiserror_macro" }
